Added Media Queries

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "seanvern.com",
+  "homepage": "https://maverickalo.github.io/seanvern.com-updated/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +11,13 @@
     "styled-components": "^3.3.3"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
